# blind-assistant

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  GRANT_NARRATIVE.md  README.md  ROADMAP.md  config.yaml  netlify.toml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: accessibility-reviewer.md  android-accessibility-expert.md  backend-developer.md  backend-security-expert.md  blind-elder-user.md  blind-power-user.md  blind-user-tester.md  cloud-architect.md  code-reviewer.md  community-advocate.md  computer-use-tester.md  deafblind-user.md  device-simulator.md  devops-engineer.md  documentation-steward.md  e2e-tester.md  education-website-designer.md  ethics-advisor.md  gap-analyst.md  goal-adherence-reviewer.md  grant-writer.md  impact-researcher.md  integration-engineer.md  ios-accessibility-expert.md  macos-accessibility-expert.md  newly-blind-user.md  nonprofit-ceo.md  open-source-steward.md  privacy-guardian.md  project-inspector.md  qa-lead.md  screen-observer.md  screen-reader-expert.md  security-specialist.md  tech-lead.md  test-engineer.md  voice-interface-designer.md  web-accessibility-expert.md  windows-accessibility-expert.md
.claude/prompts/: kick-off.md
.claude/rules/: accessibility.md  testing.md
.claude/skills/audit-a11y/: SKILL.md
.claude/skills/fix-wcag/: SKILL.md
.claude/skills/retrospective/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/run-cycle/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: accessibility_issue.md  bug_report.md  feature_request.md
.github/workflows/: autonomous-cycle.yml  ci.yml  deploy-education.yml  deploy-staging.yml  e2e-android.yml  ios-e2e.yml
clients/education/: package-lock.json  package.json  tsconfig.json
clients/education/__tests__/: App.test.tsx
clients/education/public/: index.html
clients/education/scripts/: patch-fork-ts-checker.js
clients/education/src/: App.tsx  index.tsx  setupTests.ts
clients/education/src/__tests__/: App.test.tsx
clients/education/src/components/: AudioPlayer.tsx  CourseCard.tsx  SiteFooter.tsx  SiteHeader.tsx
clients/education/src/pages/: CoursePage.tsx  HomePage.tsx  LessonPage.tsx  NotFoundPage.tsx
clients/education/src/styles/: global.css
clients/mobile/: .env.example  .gitignore  App.tsx  app.config.ts  babel.config.js  package-lock.json  package.json  tsconfig.json
clients/mobile/app/: index.tsx
clients/mobile/public/: index.html
clients/mobile/src/hooks/: useAudioRecorder.ts  useSecureStorage.ts
clients/mobile/src/hooks/__tests__/: useAudioRecorder.test.ts  useSecureStorage.test.ts
clients/mobile/src/screens/: MainScreen.tsx  SetupWizardScreen.tsx
clients/mobile/src/screens/__tests__/: MainScreen.test.tsx  SetupWizardScreen.test.tsx
clients/mobile/src/services/: api.ts
clients/mobile/src/services/__tests__/: api.test.ts
docs/: ARCHITECTURE.md  CYCLE_STATE.md  ETHICS_REQUIREMENTS.md  FEATURE_PRIORITY.md  GAP_ANALYSIS.md  INTEGRATION_MAP.md  LESSONS.md  OPEN_ISSUES.md  PRIORITY_STACK.md  PRODUCT_BRIEF.md  SECURITY_MODEL.md  USER_STORIES.md
installer/: install.py
scripts/: targeted_tests.sh
src/blind_assistant/: __init__.py  main.py
src/blind_assistant/core/: confirmation.py  context.py  orchestrator.py  planner.py
src/blind_assistant/interfaces/: api_server.py  telegram_bot.py  voice_local.py
src/blind_assistant/memory/: mcp_memory.py
src/blind_assistant/second_brain/: encryption.py  query.py  vault.py
src/blind_assistant/security/: credentials.py  disclosure.py
src/blind_assistant/tools/: registry.py
src/blind_assistant/tools/browser/: __init__.py
src/blind_assistant/vision/: redaction.py  screen_observer.py
src/blind_assistant/voice/: stt.py  tts.py
tests/: conftest.py
tests/accessibility/: helpers.py  test_jordan_scenario.py  test_marcus_scenario.py
tests/e2e/core/: __init__.py  test_dorothy_scenario.py  test_food_ordering.py  test_voice_pipeline.py
tests/integration/: test_browser_tool_real.py
tests/unit/: test_api_server.py  test_encryption.py  test_installer.py  test_main.py  test_mcp_memory.py  test_orchestrator.py  test_planner.py  test_platform_helpers.py  test_security_credentials.py  test_security_disclosure.py  test_stt.py  test_telegram_bot.py  test_tts.py  test_vault.py  test_vault_passphrase_prompt.py  test_voice_local.py
tests/unit/second_brain/: test_query.py
tests/unit/tools/: test_browser.py  test_registry.py
tests/unit/vision/: test_redaction.py  test_screen_observer.py
tools/: registry.yaml
