[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "blind-assistant"
version = "0.1.0"
description = "AI life companion for blind and visually impaired people"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]

# ─────────────────────────────────────────────
# PYTEST — test runner
# ─────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = [
    "--tb=short",
    "-v",
    "--strict-markers",
    "--strict-config",
    "-ra",  # show summary of all non-passing tests
]
filterwarnings = [
    # asyncio.wait_for cancels Queue.get() coroutines on timeout; those coroutines
    # emit a 'coroutine was never awaited' RuntimeWarning at GC time. This is benign
    # — the cancellation is intentional. Filter is narrow: only Queue.get warnings.
    "ignore:coroutine 'Queue.get' was never awaited:RuntimeWarning",
]
markers = [
    "unit: pure unit tests with no I/O or external dependencies",
    "integration: tests that touch real file system, OS keychain, or external APIs",
    "security: security-critical paths — must pass at 100% coverage, no exceptions",
    "slow: tests taking more than 1 second",
    "accessibility: voice output and accessibility behaviour tests",
    "e2e: end-to-end tests covering full user flows (only external APIs mocked)",
    "web: web platform E2E tests via Playwright (requires web server running)",
    "android: Android TalkBack E2E tests via ADB (requires AVD + ADB + Android app build)",
    "ios: iOS VoiceOver E2E tests via xcrun simctl (requires macOS + Xcode + booted simulator)",
]

# ─────────────────────────────────────────────
# COVERAGE — 80% floor; 100% on security modules
# ─────────────────────────────────────────────
[tool.coverage.run]
source = ["src/blind_assistant"]
omit = ["tests/*", "installer/*"]
branch = true  # measure branch coverage, not just line coverage

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.paths]
source = ["src/", "*/site-packages/"]

# ─────────────────────────────────────────────
# RUFF — linting + formatting
# ─────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "S",   # bandit (security)
    "B",   # bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "T20", # flake8-print (no stray print statements)
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "S101",  # assert statements (allowed in tests)
    "S603",  # subprocess calls (needed for system interactions)
    "S105",  # hardcoded password (false positives in tests)
    "S106",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "S105", "T20"]
"installer/**/*.py" = ["T20"]  # installer uses print() intentionally
"src/blind_assistant/vision/screen_observer.py" = ["E501"]  # long prompt string constants

# ─────────────────────────────────────────────
# MYPY — static type checking
# ─────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true
# check_untyped_defs ensures we still check logic even in unannotated functions
check_untyped_defs = true
# Type annotations are added incrementally; full strict mode applied once codebase matures
disallow_untyped_defs = false
warn_return_any = false

# Security-critical modules: strict type checking required
[[tool.mypy.overrides]]
module = [
    "blind_assistant.security.*",
    "blind_assistant.second_brain.encryption",
]
disallow_untyped_defs = true
warn_return_any = true
disallow_incomplete_defs = true
